郵便番号追加

--- a/lesson1.html
+++ b/lesson1.html
@@ -12,7 +12,9 @@
   <h2>住所</h2>
   <form>
     <label for="zip">郵便番号</label>
-    
+    <label for="zip">郵便番号</label>
+    <label for="zip">郵便番号</label>
+
     <div>
       <input id="zip" ype="text" class="address">
       <input id="search" type="button" value="検索">
